2008-03-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.h: Remove checks for different sizes before
	invoking set_size() function

	set_size() methods first checks if the requested new size differs
	from the current one. Therefore, there is no need to check this
	condition explicitly before invoking set_size() method.

2008-03-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Decrease the number of inline
	functions in the Vec and Mat classes

	Overusing the inline keyword usually causes unnecessary code bloat,
	which results in a rather slower performance of the resulting
	code. Therefore, this patch reduces the number of inline functions
	and lefts only the ones which are really trivial or frequently
	reused.

	* itpp/base/factory.cpp, itpp/base/factory.h,
	itpp/base/sources.mk, win32/itpp_acml.vcproj,
	win32/itpp_mkl.vcproj: Mark all create_elements() functions as
	inline ones

	These functions have 2-4 lines and are only used by alloc() and
	free() methods only, so we might gain more by inlining them
	instead of more general functions of Vec, Mat and Array classes.

2008-03-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: Add missing get(int i) method to the Mat class

	This method returns a copy of the i-th element of the matrix
	using linear addressing, which is what the const version of
	operator()(int i) does.

	* itpp/base/mat.h: Add missing operator=(const std::string &) to
	the Mat class

	There is a Mat(const std::string &) constructor but the assignment
	operator for this type of argument has not been implemented. This
	patch adds this missing operator.

	* itpp/base/mat.cpp, itpp/base/mat.h: Add element-wise division
	operator with a scalar as the dividend

	This new operator complements a similar one, which performs
	element-wise division of a matrix by a scalar.

	* itpp/base/mat.h, itpp/base/matfunc.h, itpp/base/specmat.cpp,